<resources>
    <string name="app_name">MobilePoint</string>

    <string name="admins">Administradores</string>
    <string name="admins_administration">Administración de Admins</string>
    <string name="create_admin">Crear nuevo admin</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="feedbacktitle">Nuevo administrador</string>
    <string name="userpwd">Contraseña</string>
    <string name="userpwdver">Vuelva a escribir su contraseña</string>
    <string name="sendpwd">Registrar constreña</string>
    <string name="list_tittle">Registre las direcciones a las que desea acceder</string>
    <string name="directionurl">Introduzca su dirección</string>
    <string name="saveDirection">Guardar direccion url</string>
    <string name="http">http://</string>
    <string name="welcome">Bienvenido!</string>
    <string name="userAdmin">Introduzca su contraseña </string>
    <string name="login">Login</string>
    <string name="save_admin">Guardar Administrador</string>
    <string name="save_user">Guardar Usuario</string>
    <string name="username">Username</string>
    <string name="account_type">¿Qué cuenta tienes?</string>
    <string name="user">Usuario</string>
    <string name="admin">Administrador</string>
    <string name="admin_login">Login de Administrador</string>
    <string name="update_admin">Editar Administrador</string>
    <string name="update_admin_confirm_password">Vuelva a escribir la contraseña</string>
    <string name="username_field">Nombre de usuario</string>
    <string name="users">Usuarios</string>
    <string name="users_administration">Administración de Usuarios</string>
    <string name="which_admin_section">¿A cuál sección desea entrar?</string>
    <string name="new_user">Nuevo Usuario</string>

    <string name="adult">Adulto</string>
    <string name="kid">Niño</string>
    <string name="saved_pages">Páginas guardadas</string>
    <string name="save">Guardar</string>
    <string name="teenager">Adolescente</string>
    <string name="user_edit">Editar usuario</string>
    <string name="user_login">Login de Usuario</string>


    <string name="end_session">Cerrar sesión</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="userLogin"> User Login</string>

    <!-- Fa icons -->
    <string name="fa_chevron">&#xf053;</string>
    <string name="fa_user_users">&#xf007; Usuarios</string>
    <string name="fa_user_users_edit">&#xf007; Editar usuario</string>
    <string name="fa_user_user">&#xf007; Usuario</string>
    <string name="fa_list_pages">&#xf03a; Páginas</string>
    <string name="fa_plus_new_admin">&#xf067; Nuevo</string>
    <string name="fa_recommended_pages">&#xf00b; Páginas recomendadas</string>
    <string name="fa_remove_user">&#xf00d; Borrar usuario</string>
    <string name="fa_user_secret_admins">&#xf21b; Administradores</string>
    <string name="fa_user_secret_admin">&#xf21b; Administrador</string>
    <string name="fa_times_delete_admin">&#xf00d; Borrar Administrador</string>

    <!-- Fa icons -->


</resources>
