<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/update_admin"
            android:id="@+id/textView5"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="39dp"
            android:textSize="12pt" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editAdminUsername"
            android:hint="@string/username"
            android:layout_below="@+id/textView5"
            android:layout_marginTop="41dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical|center_horizontal"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editAdminPassword"
            android:layout_below="@+id/editAdminUsername"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:inputType="textPassword"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/userpwd"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editAdminPasswordConfirmation"
            android:layout_below="@+id/editAdminPassword"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:inputType="textPassword"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/update_admin_confirm_password"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_admin"
            android:textAllCaps="false"
            android:id="@+id/button"
            android:layout_below="@+id/editAdminPasswordConfirmation"
            android:layout_alignLeft="@+id/textView5"
            android:layout_alignStart="@+id/textView5"
            android:layout_marginTop="25dp"
            android:layout_alignRight="@+id/textView5"
            android:onClick="editAdmin"
            android:layout_alignEnd="@+id/textView5" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fa_times_delete_admin"
            android:id="@+id/deleteAdmin"
            android:textAllCaps="false"
            android:backgroundTint="#9f2e2e"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="31dp" />
    </RelativeLayout>
</LinearLayout>