<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollViewForm"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1"
    android:background="#0a1d32">

    <TextView
        android:id="@+id/TextViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedbacktitle"
        android:textSize="15pt"
        android:layout_weight="0.10"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="#bbbbbb"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp">
    </TextView>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint = "@string/username"
        android:gravity="center_horizontal"
        android:inputType="textPersonName"
        android:id="@+id/username"
        android:backgroundTint="#bbbbbb"
        android:textColorHint="#bbbbbb"
        android:textColor="#bbbbbb"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/TextViewTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/Password"
        android:layout_height="wrap_content"
        android:hint="@string/userpwd"
        android:inputType="textPersonName"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal"
        android:password="true"
        android:textColor="#bbbbbb"
        android:textColorHint="#bbbbbb"
        android:backgroundTint="#bbbbbb"
        android:layout_below="@+id/username"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    </EditText>

    <EditText
        android:id="@+id/PasswordVerification"
        android:layout_height="wrap_content"
        android:hint="@string/userpwdver"
        android:inputType="textPersonName"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal"
        android:password="true"
        android:textColorHint="#bbbbbb"
        android:backgroundTint="#bbbbbb"
        android:layout_below="@+id/Password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#bbbbbb">
    </EditText>

    <Button
        android:id="@+id/ButtonSendPassword"
        android:layout_height="wrap_content"
        android:text="@string/save_admin"
        android:onClick="saveAdmin"
        android:layout_width="fill_parent"
        android:textColor="#bbbbbb"
        android:textAllCaps="false"
        android:background="#303030"
        android:layout_below="@+id/PasswordVerification"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    </Button>


</RelativeLayout>

