<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginPage"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0a1d32">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_login"
        android:textSize="20pt"
        android:gravity="center_horizontal|center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView3"
        android:textColor="#bbbbbb" />

    <EditText
        android:id="@+id/username"
        android:layout_height="wrap_content"
        android:hint="@string/username_field"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal"
        android:layout_above="@+id/password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#bbbbbb"
        android:textColorHint="#bbbbbb"
        android:textColorLink="#bbbbbb"
        android:textIsSelectable="false"
        android:autoText="false"
        android:backgroundTint="#bbbbbb" />


    <EditText
        android:id="@+id/password"
        android:layout_height="wrap_content"
        android:hint="@string/userpwd"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal"
        android:password="true"
        android:layout_above="@+id/loginButton"
        android:layout_alignRight="@+id/username"
        android:layout_alignEnd="@+id/username"
        android:textColor="#bbbbbb"
        android:textColorHint="#bbbbbb"
        android:textColorLink="#bbbbbb"
        android:backgroundTint="#bbbbbb" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:onClick="adminLogin"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAllCaps="false"
        android:textColor="#bbbbbb"
        android:background="#303030" />



</RelativeLayout>