<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0a1d32">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_login"
            android:textSize="20pt"
            android:gravity="center_horizontal|center_horizontal"
            android:id="@+id/userLoginTitle"
            android:textColor="#bbbbbb"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="38dp" />

        <EditText
            android:id="@+id/username"
            android:layout_height="wrap_content"
            android:hint="@string/username_field"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal"
            android:textColor="#bbbbbb"
            android:textColorHint="#bbbbbb"
            android:textColorLink="#bbbbbb"
            android:textIsSelectable="false"
            android:autoText="false"
            android:backgroundTint="#bbbbbb"
            android:layout_marginTop="57dp"
            android:layout_below="@+id/userLoginTitle"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/password"
            android:layout_height="wrap_content"
            android:hint="@string/userpwd"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal"
            android:password="true"
            android:textColor="#bbbbbb"
            android:textColorHint="#bbbbbb"
            android:textColorLink="#bbbbbb"
            android:backgroundTint="#bbbbbb"
            android:layout_below="@+id/username"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/button2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:onClick="adminLogin"
            android:textAllCaps="false"
            android:textColor="#bbbbbb"
            android:background="#303030"
            android:layout_below="@+id/password"
            android:layout_centerHorizontal="true" />


    </RelativeLayout>
</LinearLayout>