<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/listPage"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1">

    <TextView
        android:id="@+id/ListPageTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_tittle"
        android:textSize="13pt"
        android:gravity="center_horizontal|center_vertical"

        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/http"
        android:textSize="15dp"
            android:layout_alignBottom="@+id/direction"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/direction"
            android:id="@+id/textView" />

    <EditText
        android:id="@+id/direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:hint="@string/directionurl"
        android:layout_below="@+id/ListPageTittle"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />



    <Button
        android:id="@+id/saveDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveDirection"
        android:onClick="sendDirection"
        android:layout_below="@+id/direction"
        android:layout_centerHorizontal="true" />


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/saveDirection"
        android:id="@+id/scrollView">

        <ListView
            android:id="@+id/dirListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_below="@+id/saveDirection"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </ScrollView>


</RelativeLayout>