<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0a1d32">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saved_pages"
            android:textSize="15pt"
            android:layout_weight="0.10"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="#bbbbbb"
            android:layout_marginTop="35dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/abc_action_bar_stacked_max_height"
            android:id="@+id/page_list"
            android:layout_marginTop="28dp"
            android:layout_below="@+id/textView10"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/textView" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/http"
            android:textSize="15dp"
            android:layout_alignBottom="@+id/url"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/url"
            android:id="@+id/textView"
            android:textColor="#bbbbbb" />

        <EditText
            android:id="@+id/url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/directionurl"
            android:layout_marginBottom="68dp"
            android:textColor="#bbbbbb"
            android:textColorHint="#bbbbbb"
            android:textColorHighlight="#bbbbbb"
            android:textColorLink="#bbbbbb"
            android:backgroundTint="#bbbbbb"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/textView"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textAllCaps="false"
            android:id="@+id/create_page"
            android:onClick="createPage"
            android:background="#303030"
            android:textColor="#bbbbbb"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fa_chevron"
            android:id="@+id/go_back"
            android:onClick="goBack"
            android:background="#303030"
            android:textColor="#bbbbbb"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="3dp"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText" />
</LinearLayout>