<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0a1d32">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/users_administration"
            android:id="@+id/textView6"
            android:layout_marginTop="31dp"
            android:textColor="#bbbbbb"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/abc_action_bar_stacked_max_height"
            android:id="@+id/users_collection"
            android:layout_marginTop="22dp"
            android:layout_below="@+id/textView6"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/create_user" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fa_plus_new_admin"
            android:textAllCaps="false"
            android:id="@+id/create_user"
            android:onClick="createUser"
            android:background="#303030"
            android:textColor="#bbbbbb"
            android:layout_marginBottom="44dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fa_chevron"
            android:id="@+id/go_back"
            android:onClick="goBack"
            android:background="#303030"
            android:textColor="#bbbbbb"
            android:layout_marginLeft="3dp"
            android:layout_alignBottom="@+id/create_user"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>
</LinearLayout>
